--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,3 @@
-<div class="top-wrapper">
-  <h1>StaticPages#top</h1>
-  <p>Find me in app/views/static_pages/top.html.erb</p>
+<div class="top-wrapper top-inner-text">
+  <h1>RUNTEQ BOARD APP</h1>
 </div>
