--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,35 +8,39 @@
       <span class='navbar-toggler-icon'></span>
     </button>
 
-    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-      <ul class='navbar-nav ml-auto main-nav align-items-center'>
-        <li class='nav-item dropdown dropdown-slide'>
-          <a href='#' class='nav-link dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
-            掲示板
-          </a>
+    <% if logged_in? %>
+      <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+        <ul class='navbar-nav ml-auto main-nav align-items-center'>
+          <li class='nav-item dropdown dropdown-slide'>
+            <a href='#' class='nav-link dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>
+              掲示板
+            </a>
 
-          <div class='dropdown-menu dropdown-menu-right'>
-            <a class='dropdown-item' href='#'>掲示板一覧</a>
-            <a class='dropdown-item' href='#'>掲示板作成</a>
-          </div>
-        </li>
+            <div class='dropdown-menu dropdown-menu-right'>
+              <a class='dropdown-item' href='#'>掲示板一覧</a>
+              <a class='dropdown-item' href='#'>掲示板作成</a>
+            </div>
+          </li>
 
-        <li class='nav-item'>
-          <a class='nav-link' href='#'>ブックマーク一覧</a>
-        </li>
+          <li class='nav-item'>
+            <a class='nav-link' href='#'>ブックマーク一覧</a>
+          </li>
 
-        <li class='nav-item dropdown dropdown-slide'>
-          <a href='#' class='nav-link' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'>
-          　<%= image_tag 'sample', size: '40x40', class: 'rounded-circle mr15'%>
-          </a>
-          <div class='dropdown-menu dropdown-menu-right'>
-            <div class='dropdown-item'>らんてっく たろう</div>
-            <div class='dropdown-divider'></div>
-            <a class='dropdown-item' href='#'>プロフィール</a>
-            <a class='dropdown-item' href='#'>ログアウト</a>
-          </div>
-        </li>
-      </ul>
-    </div>
+          <li class='nav-item dropdown dropdown-slide'>
+            <a href='#' class='nav-link' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'>
+            　<%= image_tag 'sample', size: '40x40', class: 'rounded-circle mr15'%>
+            </a>
+            <div class='dropdown-menu dropdown-menu-right'>
+              <div class='dropdown-item'>current_user.first_name</div>
+              <div class='dropdown-divider'></div>
+              <%= link_to "プロフィール", current_user, {class:'dropdown-item'} %>
+              <%= link_to "ログアウト", logout_path, {method: :delete, class:'dropdown-item'} %>
+            </div>
+          </li>
+        </ul>
+      </div>
+    <% else %>
+      <%= render 'layouts/before_login_header' %>
+    <% end %>
   </nav>
 </header>
