--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user, local: true) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -12,30 +12,30 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :first_name %><br />
-    <%= form.text_field :first_name %>
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name %>
   </div>
 
   <div class="field">
-    <%= form.label :last_name %><br />
-    <%= form.text_field :last_name %>
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name %>
   </div>
 
   <div class="field">
-    <%= form.label :email %><br />
-    <%= form.text_field :email %>
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
   </div>
 
   <div class="field">
-    <%= form.label :password %><br />
-    <%= form.password_field :password %>
+    <%= f.label :password %><br />
+    <%= f.password_field :password %>
   </div>
   <div class="field">
-    <%= form.label :password_confirmation %><br />
-    <%= form.password_field :password_confirmation %>
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation %>
   </div>
 
   <div class="actions">
-    <%= form.submit "登録" %>
+    <%= f.submit "登録" %>
   </div>
 <% end %>
