--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -13,5 +13,5 @@
 　<% if @boards %>
     <%= render partial: 'board', collection: @boards %>
   <% else %>
-    <%= "掲示板がありません。" %>
+    <h1>"掲示板がありません。" </h1>
   <% end %>
