--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -10,8 +10,8 @@
     </div>
   </div>
   <!-- 掲示板一覧 -->
-　<% if @boards %>
+  <% if @boards.present? %>
     <%= render partial: 'board', collection: @boards %>
   <% else %>
-    <h1>"掲示板がありません。" </h1>
+    <p>掲示板がありません。</p>
   <% end %>
