--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
 
             <div class='dropdown-menu dropdown-menu-right'>
             <%= link_to "掲示板一覧", "/boards" ,{class:'dropdown-item'} %>
-              <a class='dropdown-item' href='#'>掲示板作成</a>
+            <%= link_to "掲示板作成", "/boards/new" ,{class:'dropdown-item'} %>
             </div>
           </li>
 
