--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -14,7 +14,7 @@
           </div>
 
           <div class="btn btn-primary">
-            <%= f.submit "作成" %>
+            <%= f.submit "登録する" %>
           </div>
 
         <% end %>
