10_form_error_messages

--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -3,19 +3,27 @@
     <div class="col-lg-8 offset-lg-2">
       <h1>掲示板作成</h1>
         <%= form_with(model: @board, local: true) do |f| %>
+          <% if @board.errors.any? %>
+            <div id="error_explanation">
+              <ul>
+              <% @board.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>
+
           <div class="form-group">
-            <%= f.label :title, "タイトル" %><br />
-            <%= f.text_field :title %>
+            <%= f.label :title, "タイトル" %>
+            <%= f.text_field :title, class: 'form-control' %>
           </div>
 
           <div class="form-group">
-            <%= f.label :body, "本文" %><br />
-            <%= f.text_field :body %>
+            <%= f.label :body, "本文" %>
+            <%= f.text_area :body, class: 'form-control', rows: 10 %>
           </div>
 
-          <div class="btn btn-primary">
-            <%= f.submit "登録する" %>
-          </div>
+          <%= f.submit class: 'btn btn-primary' %>
 
         <% end %>
     </div>
