--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -14,12 +14,12 @@
           <% end %>
 
           <div class="form-group">
-            <%= f.label :title, "タイトル" %>
+            <%= f.label :title %>
             <%= f.text_field :title, class: 'form-control' %>
           </div>
 
           <div class="form-group">
-            <%= f.label :body, "本文" %>
+            <%= f.label :body %>
             <%= f.text_area :body, class: 'form-control', rows: 10 %>
           </div>
 
