--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -10,6 +10,11 @@
       <%= f.text_area :body, class: 'form-control', rows: 10 %>
     </div>
 
+    <div class="form-group">
+      <%= f.label :board_image %>
+      <%= f.file_field :board_image, class: 'form-control' %>
+    </div>
+
     <%= f.submit class: 'btn btn-primary' %>
 
 <% end %>
