--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -5,7 +5,7 @@
       <%= f.label :body %>
       <%= f.text_area :body, class: 'form-control' %>
     </div>
-    <%= f.submit class: 'btn btn-primary' %>
+    <%= f.submit "投稿", class: 'btn btn-primary' %>
   </div>
 
 <% end %>
