--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
       <%= f.label :body %>
-      <%= f.text_area :body, class: 'form-control' %>
+      <%= f.text_area :body, class: "form-control mb-3" %>
       <%= f.submit "投稿", class: 'btn btn-primary' %>
     </div>
   </div>
