--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -30,5 +30,11 @@
   <!-- コメントフォーム -->
   <%= render 'comments/form' %>
   <!-- コメントエリア -->
-  <%= render partial: 'comments/comment', collection: @comments %>
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <table id="js-table-comment" class="table">
+        <%= render partial: 'comments/comment', collection: @comments %>
+      </table>
+    </div>
+  </div>
 </div>
