--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,21 +4,27 @@
   </td>
   <td>
     <h3 class="small"><%= comment.user.decorate.full_name %></h3>
-    <div id="js-comment-25">
+    <div id="js-comment-273">
       <p><%= comment.body %></p>
     </div>
-    <div style="display: none;">
-      <textarea class="form-control mb-1">コメントです</textarea>
-      <button class="btn btn-light">キャンセル</button>
-      <button class="btn btn-success">更新</button>
+    <div id="js-textarea-comment-box-273" style="display: none;">
+      <textarea id="js-textarea-comment-273" class="form-control mb-1"><%= comment.body %></textarea>
+      <button class="btn btn-light js-button-edit-comment-cancel" data-comment-id="273">キャンセル</button>
+      <button class="btn btn-success js-button-comment-update" data-comment-id="273">更新</button>
     </div>
   </td>
   <td class="action">
   <% if comment.user == current_user %>
-    <div class='mr10 float-right'>
-      <a href="#"><%= icon 'fa', 'pen' %></a>
-      <a href="#"><%= icon 'fas', 'trash', class: 'pr-1' %></a>
-    </div>
+    <td class="action">
+      <ul class="list-inline justify-content-center" style="float: right;">
+        <li class="list-inline-item">
+          <a href="#" class='js-edit-comment-button' data-comment-id="273"><i class='fa fa-pen'></i></a>
+        </li>
+        <li class="list-inline-item">
+          <a class="js-delete-comment-button" data-confirm="削除しますか？" data-remote="true" rel="nofollow" data-method="delete" href="/comments/273"><i class="fa fa-trash"></i></a>
+        </li>
+      </ul>
+    </td>
   <% end %>
   </td>
 </tr>
