--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,30 +1,33 @@
-<tr id="comment-25">
-  <td style="width: 60px">
-  　<%= image_tag 'sample', size: '50x50', class: 'rounded-circle mr15'%>
-  </td>
-  <td>
-    <h3 class="small"><%= comment.user.decorate.full_name %></h3>
-    <div id="js-comment-273">
-      <p><%= comment.body %></p>
-    </div>
-    <div id="js-textarea-comment-box-273" style="display: none;">
-      <textarea id="js-textarea-comment-273" class="form-control mb-1"><%= comment.body %></textarea>
-      <button class="btn btn-light js-button-edit-comment-cancel" data-comment-id="273">キャンセル</button>
-      <button class="btn btn-success js-button-comment-update" data-comment-id="273">更新</button>
-    </div>
-  </td>
-  <td class="action">
-  <% if comment.user == current_user %>
-    <td class="action">
-      <ul class="list-inline justify-content-center" style="float: right;">
-        <li class="list-inline-item">
-          <a href="#" class='js-edit-comment-button' data-comment-id="273"><i class='fa fa-pen'></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a class="js-delete-comment-button" data-confirm="削除しますか？" data-remote="true" rel="nofollow" data-method="delete" href="/comments/273"><i class="fa fa-trash"></i></a>
-        </li>
-      </ul>
-    </td>
-  <% end %>
-  </td>
-</tr>
+<tr id="comment-<%= comment.id %>">
+   <td style="width: 60px">
+     <%= image_tag 'sample.jpg', class: 'rounded-circle', size: '50x50' %>
+   </td>
+   <td>
+     <h3 class="small"><%= comment.user.decorate.full_name %></h3>
+     <div id="js-comment-<%= comment.id %>">
+       <%= simple_format(comment.body) %>
+     </div>
+     <div id="js-textarea-comment-box-<%= comment.id %>" style="display: none;">
+       <textarea id="js-textarea-comment-<%= comment.id %>" class="form-control mb-1"><%= comment.body %></textarea>
+       <button class="btn btn-light js-button-edit-comment-cancel" data-comment-id="<%= comment.id %>">キャンセル</button>
+       <button class="btn btn-success js-button-comment-update" data-comment-id="<%= comment.id %>">更新</button>
+     </div>
+   </td>
+
+   <% if current_user == comment.user %>
+     <td class="action">
+       <ul class="list-inline justify-content-center" style="float: right;">
+         <li class="list-inline-item">
+           <a href="#" class='js-edit-comment-button' data-comment-id="<%= comment.id %>">
+             <%= icon 'fa', 'pen' %>
+           </a>
+         </li>
+         <li class="list-inline-item">
+           <a href="#" class='js-delete-comment-button' data-comment-id="<%= comment.id %>">
+             <%= icon 'fas', 'trash' %>
+           </a>
+         </li>
+       </ul>
+     </td>
+   <% end %>
+ </tr>
