14_board_edit_delete

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<% content_for(:title, "ユーザー登録") %>
-
+<% content_for(:title, t('.title')) %>
 <h1><%= t '.title' %></h1>
 
 <%= form_with(model: @user, local: true) do |f| %>
