14_board_edit_delete

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t('.title')) %>
+<% content_for(:title, @board.title) %>
 
 <div class="container pt-5">
   <div class="row mb-3">
