--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -4,10 +4,9 @@
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
       <h1> <%= t '.title' %> </h1>
-      <div class='mr10 float-right'>
-        <a href="#"><%= icon 'fa', 'pen' %></a>
-        <a href="#"><%= icon 'fas', 'trash', class: 'pr-1' %></a>
-      </div>
+      <% if current_user == @board.user %>
+           <%= render 'crud_menus', board: @board %>
+         <% end %>
       <!-- 掲示板内容 -->
       <article class="card">
         <div class="card-body">
