--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -4,9 +4,7 @@
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
       <h1> <%= t '.title' %> </h1>
-      <% if current_user == @board.user %>
-           <%= render 'crud_menus', board: @board %>
-         <% end %>
+      <%= render 'crud_menus', board: @board if current_user.own?(@board) %>
       <!-- 掲示板内容 -->
       <article class="card">
         <div class="card-body">
