--- a/app/views/boards/_crud_menus.html.erb
+++ b/app/views/boards/_crud_menus.html.erb
@@ -1,12 +1,18 @@
-<ul class='crud-menu-btn list-inline float-right'>
-   <li class="list-inline-item">
-     <%= link_to edit_board_path(board), id: "button-edit-#{board.id}" do %>
-       <%= icon 'fa', 'pen' %>
-     <% end %>
-   </li>
-   <li class="list-inline-item">
-     <%= link_to board_path(board), id: "button-delete-#{board.id}", method: :delete, data: {confirm: "削除しますか？"} do %>
-       <%= icon 'fas', 'trash' %>
-     <% end %>
-   </li>
-</ul>
+<% if current_user.own?(board) %>
+  <ul class='crud-menu-btn list-inline float-right'>
+     <li class="list-inline-item">
+       <%= link_to edit_board_path(board), id: "button-edit-#{board.id}" do %>
+         <%= icon 'fa', 'pen' %>
+       <% end %>
+     </li>
+     <li class="list-inline-item">
+       <%= link_to board_path(board), id: "button-delete-#{board.id}", method: :delete, data: {confirm: "削除しますか？"} do %>
+         <%= icon 'fas', 'trash' %>
+       <% end %>
+     </li>
+  </ul>
+<% else %>
+  <div style='display: inline; float: right;'>
+    <%= render 'boards/bookmark_area', board: board %>
+  </div>
+<% end %>
