--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -21,7 +21,7 @@
          <% if @boards.present? %>
            <%= render @boards %>
          <% else %>
-           <p>掲示板がありません。</p>
+           <p>ブックマーク中の掲示板がありません。</p>
          <% end %>
        </div>
      </div>
