--- a/app/views/boards/_crud_menus.html.erb
+++ b/app/views/boards/_crud_menus.html.erb
@@ -13,6 +13,6 @@
   </ul>
 <% else %>
   <div style='display: inline; float: right;'>
-    <%= render 'boards/bookmark_area', board: board %>
+    <%= render 'bookmark_area', board: board %>
   </div>
 <% end %>
