--- a/app/views/boards/_bookmark_area.html.erb
+++ b/app/views/boards/_bookmark_area.html.erb
@@ -1,5 +1,5 @@
 <% if board.bookmark_by?(current_user) %>
-  <%= render 'boards/bookmark', board: board %>
+  <%= render 'bookmark', board: board %>
 <% else %>
-  <%= render 'boards/unbookmark', board: board %>
+  <%= render 'unbookmark', board: board %>
 <% end %>
