--- a/app/views/boards/_unbookmark.html.erb
+++ b/app/views/boards/_unbookmark.html.erb
@@ -1,1 +1,3 @@
-<%= link_to icon('far', 'star'), board_bookmarks_path(board.id), method: :post, remote: true, id: :"js-bookmark-button-for-board-#{board.id}" %>
+<%= link_to board_bookmarks_path(board.id), method: :post, remote: true, id: "js-bookmark-button-for-board-#{board.id}" do %>
+  <%= icon('far', 'star') %>
+<% end %>
