--- a/app/views/bookmarks/create.js.erb
+++ b/app/views/bookmarks/create.js.erb
@@ -1,1 +1,1 @@
-$("#js-bookmark-button-for-board-<%= @bookmark.board_id %>").html("<%= j(render 'boards/board') %>");
+$("#js-bookmark-button-for-board-<%= @board.id %>").replaceWith("<%= j(render('boards/bookmark', board: @board)) %>");
