--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -23,9 +23,9 @@
            </a>
          </li>
          <li class="list-inline-item">
-           <a href="#" class='js-delete-comment-button' data-comment-id="<%= comment.id %>">
-             <%= icon 'fas', 'trash' %>
-           </a>
+           <%= link_to comment_path(comment.id), method: :delete, data: { confirm: "削除しますか？" }, remote: true, id: "js-table-comment", class: 'js-delete-comment-button' do %>
+             <%= icon 'fa', 'trash' %>
+           <% end %>
          </li>
        </ul>
      </td>
