--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,9 @@
-<%= form_with model: [@board, @comment], local: true do |f| %>
-
+<%= form_with model: [@board, @comment], id: 'new_comment', remote: true do |f| %>
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
       <%= f.label :body %>
-      <%= f.text_area :body, class: "form-control mb-3" %>
+      <%= f.text_area :body, id: 'js-new-comment-body', class: "form-control mb-3" %>
       <%= f.submit "投稿", class: 'btn btn-primary' %>
     </div>
   </div>
-
 <% end %>
