--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
       <%= f.label :body %>
-      <%= f.text_area :body, id: 'js-new-comment-body', class: "form-control mb-3" %>
+      <%= f.text_area :body, id: 'js-new-comment-body', class: "form-control mb-3", placeholder: Comment.human_attribute_name(:body) %>
       <%= f.submit "投稿", class: 'btn btn-primary' %>
     </div>
   </div>
