--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -24,6 +24,7 @@
            <p>ブックマーク中の掲示板がありません。</p>
          <% end %>
        </div>
+     <%= paginate @boards, theme: 'twitter-bootstrap-4' %>
      </div>
    </div>
  </div>
