--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -3,7 +3,7 @@
    <div class="row">
      <div class="col-lg-10 offset-lg-1">
        <!-- 検索フォーム -->
-       <%= search_form_for @q do |f| %>
+       <%= search_form_for @q, enforce_utf8: false do |f| %>
         <div class="input-group mb-3">
           <%= f.search_field :title_or_body_cont, class: "form-control", placeholder:"検索ワード"  %>
           <div class="input-group-append">
