--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,9 @@
+<% content_for(:title, t('.title')) %>
+
 <h1><%= t '.title' %></h1>
 
 <%= form_with(model: @user, url: profile_path, local: true) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
