--- a/app/views/layouts/admin/base.html.erb
+++ b/app/views/layouts/admin/base.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title><%= page_title(yield(:title)) %></title>
-  <%= csrf_meta_tags %>
+<title>AdminLTE 3 | Log in</title>
+<%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <%= stylesheet_link_tag    'admin', media: 'all' %>
+  <%= javascript_include_tag 'admin' %>
 </head>
 
   <body>
