--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -11,7 +11,7 @@
     <!-- Sidebar user panel (optional) -->
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="image">
-        <%= image_tag current_user.avatar_url, class: 'img-circle elevation-2' %>
+        <%= image_tag current_user.image_name.url, class: 'img-circle elevation-2' %>
       </div>
       <div class="info">
         <a href="#" class="d-block"><%= current_user.decorate.full_name %></a>
