--- a/app/views/admin/boards/index.html.erb
+++ b/app/views/admin/boards/index.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <!-- 掲示板一覧 -->
-  <table class="table">
+  <table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">ID</th>
