--- a/app/views/admin/boards/_search_form.html.erb
+++ b/app/views/admin/boards/_search_form.html.erb
@@ -2,7 +2,7 @@
     <div class="input-group mb-3">
       <%= f.search_field :title_or_body_cont, class: 'form-control', placeholder: '検索ワード' %>
       <%= f.date_field :created_at_gteq %>〜
-      <%= f.date_field :created_at_lteq %>
+      <%= f.date_field :created_at_lteq_end_of_day %>
 
       <div class="input-group-append">
         <%= f.submit '検索', class: 'btn btn-primary' %>
