--- a/app/views/admin/users/_search_form.html.erb
+++ b/app/views/admin/users/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%= search_form_for q, url: url do |f| %>
     <div class="input-group mb-3">
       <%= f.search_field :first_name_or_last_name_cont, class: 'form-control', placeholder: '検索ワード' %>
-      <%= f.select :role_eq, [['一般',0],['管理者',1]], class: 'form-control' %>
+      <%= f.select :role_eq, User.roles_i18n.invert.map{|key, value| [key, User.roles[value]]}, class: 'form-control' %>
 
       <div class="input-group-append">
         <%= f.submit '検索', class: 'btn btn-primary' %>
